# golf-analytics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
src/: app.py  calculations.py  data_loader.py  visualisations.py
tests/: test_calculations.py  test_data_loader.py  test_visualisations.py
tests/test_data/: mock_data.csv
