[project]
name = "golf-analytics"
version = "1.0.0"
description = "A Streamlit dashboard to analyse personal golf performance data from Google Sheets."
authors = [
    { name = "Andy Neary", email = "neary.andrew.j@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.13"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
streamlit = ">=1.49.1"
pandas = ">=2.3.2"
gspread = ">=5.12.4"
plotly = ">=6.3.0"
google-auth-oauthlib = ">=1.2.2"
st-gsheets-connection = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pre-commit = "^4.3.0"
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Common settings for both the linter and formatter
line-length = 88

[tool.ruff.lint]
# Linter settings
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

[tool.ruff.format]
# Formatter settings
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
# Set the directory where pytest will look for tests
testpaths = [
    "tests",
]
# --import-mode=importlib is recommended for src layouts
addopts = "--import-mode=importlib"
